[Mac] Bring Chrome to the front when the settings button in a notification is clicked.

BUG=655443

Review-Url: https://codereview.chromium.org/2412983004
Cr-Commit-Position: refs/heads/master@{#425042}

Former-commit-id: c72276b24d4574f8a2ba899c27dff45be4d4cbfd